tests/snapshots/examples_fixtures/aether__borrow_calls.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/borrow_calls.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
