tests/snapshots/examples_fixtures/aether__class_borrow_calls.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/class_borrow_calls.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
