tests/snapshots/examples_fixtures/aether__drop_spec_branchy.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/drop_spec_branchy.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
