tests/snapshots/examples_fixtures/aether__drop_spec_recursive.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 27
---
Fixture: examples/aether/drop_spec_recursive.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
