tests/snapshots/examples_fixtures/aether__fbip_success_cases.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 27
---
Fixture: examples/aether/fbip_success_cases.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
