tests/snapshots/examples_fixtures/aether__fbip_vacuous.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/fbip_vacuous.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
