tests/snapshots/examples_fixtures/aether__forwarded_wrapper_reuse.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/forwarded_wrapper_reuse.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
