tests/snapshots/examples_fixtures/aether__hof_recursive_suite.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 27
---
Fixture: examples/aether/hof_recursive_suite.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
