tests/snapshots/examples_fixtures/aether__opt_corpus_negative.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/opt_corpus_negative.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
