tests/snapshots/examples_fixtures/aether__opt_corpus_positive.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/opt_corpus_positive.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
