tests/snapshots/examples_fixtures/aether__polymorphic_core_types.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/polymorphic_core_types.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
