tests/snapshots/examples_fixtures/aether__queue_workload.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/queue_workload.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
